<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.Homepage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="308dp"
        android:layout_height="236dp"
        android:layout_marginBottom="72dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats_view">

        <Button
            android:id="@+id/dictionary_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/dictionary"
            app:layout_constraintBottom_toTopOf="@+id/stats_button"
            app:layout_constraintEnd_toStartOf="@+id/diary_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/diary_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/diary"
            app:layout_constraintBottom_toTopOf="@+id/memoryGame_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dictionary_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/stats_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/statistics"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/memoryGame_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dictionary_btn" />

        <Button
            android:id="@+id/memoryGame_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/memory_game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/stats_button"
            app:layout_constraintTop_toBottomOf="@+id/diary_button"
            app:layout_constraintVertical_bias="0.273" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="226dp"
        android:layout_height="255dp"
        android:src="@mipmap/my_diary_icon"
        app:layout_constraintBottom_toTopOf="@+id/stats_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stats_view"
        android:layout_width="316dp"
        android:layout_height="85dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>